core/tests/async_compile_fail/async_nested_contexts.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/async_compile_fail/async_nested_contexts.rs:9:38
   |
7  | /      async_with!(ctx_1 => |ctx_1|{
8  | |/         async_with!(ctx_2 => |ctx_2|{
9  | ||             ctx_1.globals().set("t", ctx_2.globals());
   | ||                                      ^^^^^^^^^^^^^^^ `ctx_2` escapes the closure body here
10 | ||         }).await
   | ||__________- `ctx_2` is a reference that is only valid in the closure body
11 | |      })
   | |_______- `ctx_1` declared here, outside of the closure body

error[E0521]: borrowed data escapes outside of closure
  --> tests/async_compile_fail/async_nested_contexts.rs:9:13
   |
7  | /     async_with!(ctx_1 => |ctx_1|{
8  | |         async_with!(ctx_2 => |ctx_2|{
9  | |             ctx_1.globals().set("t", ctx_2.globals());
   | |             ^^^^^^^^^^^^^^^
   | |             |
   | |             `ctx_1` escapes the closure body here
   | |             argument requires that `'1` must outlive `'static`
10 | |         }).await
11 | |     })
   | |      -
   | |      |
   | |______`ctx_1` is a reference that is only valid in the closure body
   |        has type `Ctx<'1>`
